# srrg_hbst

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
cmake_modules/: FindEigen3.cmake  FindQGLViewer.cmake
examples/: CMakeLists.txt  CMakeLists.txt~  README.md  match.cpp  match_incremental.cpp  match_incremental_opencv_pointers.cpp  match_incremental_opencv_score.cpp  match_opencv_indices.cpp  match_opencv_pointers.cpp  match_probabilistic.cpp  recognizer.cpp  recognizer_node.cpp  smoother_binocular.cpp  smoother_monocular.cpp  srrg_hbst_search_bonsai.cpp  srrg_hbst_search_opencv_indices.cpp  srrg_hbst_search_opencv_pointers.cpp  srrg_hbst_search_opencv_pointers_bonsai.cpp  srrg_hbst_search_plain.cpp  srrg_hbst_search_probabilistic.cpp  tracker.cpp
examples/eigen/: match_probabilistic.cpp
examples/opencv/: match_features.cpp  match_features_incremental.cpp  match_incremental_opencv.cpp  match_incremental_opencv_pointers.cpp  match_incremental_opencv_score.cpp  match_opencv.cpp  match_opencv_indices.cpp  match_opencv_pointers.cpp  match_subclasses_incremental.cpp  recognizer.cpp  score_images.cpp  score_opencv.cpp  stress_test.cpp  tracker.cpp
examples/opencv_and_eigen/: smoother_binocular.cpp  smoother_monocular.cpp
examples/ros/: recognizer_node.cpp
examples/test_images/: image_09.pgm  image_10.pgm
src/srrg_hbst_types/: binary_match.hpp  binary_matchable.hpp  binary_node.hpp  binary_tree.hpp
src/srrg_hbst_types_probabilistic/: probabilistic_matchable.hpp  probabilistic_node.hpp  probabilistic_tree.hpp
srrg_hbst/types/: binary_match.hpp  binary_matchable.hpp  binary_node.hpp  binary_tree.hpp
srrg_hbst/types_probabilistic/: probabilistic_matchable.hpp  probabilistic_node.hpp
tests/: test_streaming.cpp
